--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "terser": "^5.46.0",
     "vite": "npm:rolldown-vite@7.2.5"
