--- a/react/package.json
+++ b/react/package.json
@@ -39,8 +39,10 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.83.0",
+    "autoprefixer": "^10.4.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -57,6 +59,7 @@
     "react-router-dom": "^7.10.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
+    "svgo": "^4.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "vaul": "^1.1.2",
