--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,67 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Virtual environment
-venv/
-env/
-.venv/
+node_modules
+dist
+dist-ssr
+*.local
 
-# IDE
-.idea/
-.vscode/
-.trae/
-*.swp
-*.swo
-*~
-
-# OS
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Environment variables
+.env
+.env.local
+.env.production.local
+.env.development.local
+.env.test.local
 
 # Build files
 build/
-dist/
-*.egg-info/
 
-# Logs
-logs/
-*.log
+# Testing
+coverage/
+*.lcov
+.nyc_output/
 
 # Temporary files
 *.tmp
 *.temp
 .cache/
 
-# Data files (optional - if you want to track timeline.json, remove this)
-# data/
+# OS generated files
+Thumbs.db
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+
+# Trae AI files
+.trae/
+
+# Package manager files
+yarn.lock
+pnpm-lock.yaml
+node_modules
+
+.venv/
+
+playwright-report/
+test-results/
+tests/output/
