feat: 优化前端配置并添加图片压缩功能
- 在vite配置中添加图片优化插件，支持多种格式压缩
- 新增eslint配置文件，完善代码规范检查
- 统一并完善package.json中的脚本命令
- 修复package.json格式问题

--- a/frontend/tiantong/package.json
+++ b/frontend/tiantong/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "dev": "vite",
+    "dev": "vite --host",
     "lint": "eslint .",
     "preview": "vite preview"
   },
