--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,6 @@
     "react": "^19.2.0",
     "react-day-picker": "^9.11.3",
     "react-dom": "^19.2.0",
-    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.67.0",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.10.0",
@@ -72,6 +71,7 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "esbuild": "^0.25.12",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
