feat: 重构测试框架并优化弹幕功能
refactor(test): 重构测试目录结构，将测试按单元/集成分类
feat(test): 添加测试工具函数和测试数据fixtures
fix(types): 扩展Video接口，添加category、views和icon字段
feat(danmaku): 优化弹幕类型随机分配和数据处理逻辑
perf(danmaku): 移除动态速度控制，固定弹幕滚动速度
test: 添加组件单元测试和集成测试用例
chore: 更新jest配置和测试脚本

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -98,6 +98,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "jest",
+    "test:unit": "jest tests/unit",
+    "test:integration": "jest tests/integration",
+    "test:e2e": "jest tests/e2e",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
