--- a/backend/data/approved.json
+++ b/backend/data/approved.json
@@ -1,3 +1,222 @@
 {
-  "videos": []
+  "videos": [
+    {
+      "id": 1,
+      "bv": "BV1ZHiyBkExG",
+      "url": "https://www.bilibili.com/video/BV1ZHiyBkExG",
+      "title": "《原神》哥伦比娅角色PV——「存于何处」",
+      "description": "夜晚打湿她的睫毛，惊喜像阳光一样落在她脚边。",
+      "publish_date": "2026-01-21",
+      "views": 3010487,
+      "danmaku": 56581,
+      "up主": "原神",
+      "thumbnail": "//i1.hdslb.com/bfs/archive/57b7a6358b0a552852242e66d1610eada2ac61b6.jpg@100w_100h_1c.png",
+      "crawled_at": "2026-01-21 12:00:00",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "id": 2,
+      "bv": "BV16SveBSEyi",
+      "url": "https://www.bilibili.com/video/BV16SveBSEyi",
+      "title": "《原神》千星奇域 -「月之四」版本传说套装PV - 晨曦朝露",
+      "description": "一元复始，礼规更新。新的传说套装「晨曦朝露」即将登场。",
+      "publish_date": "2026-01-20",
+      "views": 880000,
+      "danmaku": 12000,
+      "up主": "原神千星奇域",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/f03d0a2fc7a903cfe1641a70a15ec992e569b821.jpg@100w_100h_1c.png",
+      "crawled_at": "2026-01-21 12:01:00",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "id": 3,
+      "bv": "BV1rbi8BrE7p",
+      "url": "https://www.bilibili.com/video/BV1rbi8BrE7p",
+      "title": "《原神》提瓦特风尚·衣装PV - 嘉夜沈邃",
+      "description": "冬天飘来了鲜花与柑橘，她的指尖落满星光。",
+      "publish_date": "2026-01-19",
+      "views": 1200000,
+      "danmaku": 25000,
+      "up主": "原神",
+      "thumbnail": "//i2.hdslb.com/bfs/archive/8d3a7d361d42dcd76cb471e5b49cfc6d0b2e2de3.jpg@100w_100h_1c.png",
+      "crawled_at": "2026-01-21 12:02:00",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "1QNzjBhE3s",
+      "url": "https://www.bilibili.com/video/BV1QNzjBhE3s",
+      "title": "乱打一通的2限定金小玛n6螃蟹",
+      "description": ":",
+      "publish_date": "2026-01-21 16:44:03",
+      "views": 278,
+      "danmaku": 0,
+      "up主": "K9P9K",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/fdb07b8cd033affe546eed3950c841e74e406194.jpg@100w_100h_1c.png",
+      "crawled_at": "2026-01-21 16:54:31",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "1Ywr6BBEei",
+      "url": "https://www.bilibili.com/video/BV1Ywr6BBEei",
+      "title": "【原神】少女 哥伦比娅 超详细养成攻略教学",
+      "description": ":",
+      "publish_date": "2026-01-14 09:10:00",
+      "views": 657378,
+      "danmaku": 1614,
+      "up主": "贪欲九头蛇_",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/54149b70c5f6cb531e6b647788ac32ac1aad8357.jpg@100w_100h_1c.png",
+      "crawled_at": "2026-01-21 16:54:34",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "1XMzjB8EFH",
+      "url": "https://www.bilibili.com/video/BV1XMzjB8EFH",
+      "title": "「幽境危战」零命四星武器火神，1金队轻松通关难6火刃",
+      "description": "有了满伊就是不一样",
+      "publish_date": "2026-01-21 16:47:57",
+      "views": 102,
+      "danmaku": 0,
+      "up主": "舞之叶",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/42ef83de9b6f7d2e052f7cf6d2b7d3c93143fc2c.jpg@100w_100h_1c.png",
+      "crawled_at": "2026-01-21 16:54:37",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "1mKzGB5EJ7",
+      "url": "https://www.bilibili.com/video/BV1mKzGB5EJ7",
+      "title": "全网首发！五星全0命通关难度6",
+      "description": ":",
+      "publish_date": "2026-01-21 10:40:58",
+      "views": 68924,
+      "danmaku": 171,
+      "up主": "漪棘",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/d3594b21225733cc2dd07b2ec01e79cb0c9a5439.jpg@100w_100h_1c.png",
+      "crawled_at": "2026-01-21 16:54:39",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "1XPzjBwErv",
+      "url": "https://www.bilibili.com/video/BV1XPzjBwErv",
+      "title": "破冰人游戏手柄玩原神了解下",
+      "description": "这是一个关于破冰人游戏手柄玩原神了解下的精彩视频，为您带来优质的内容体验。欢迎观看并点赞支持！",
+      "publish_date": "2026-01-21 16:48:15",
+      "views": 0,
+      "danmaku": 0,
+      "up主": "好物学长",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/b6c5f95d5e2479f68fa24797d73a2acaf0fa458e.jpg@100w_100h_1c.png",
+      "crawled_at": "2026-01-21 16:54:42",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "1c4zjB7EZL",
+      "url": "https://www.bilibili.com/video/BV1c4zjB7EZL",
+      "title": "【原神】【半熟机翻 屠鸟哥】月之四 魔神任务 第八幕下",
+      "description": ":",
+      "publish_date": "2026-01-21 16:44:57",
+      "views": 20,
+      "danmaku": 0,
+      "up主": "Leaf君呀",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/82ba06399471398f76a7abdc3310d964c9cf9ff6.jpg@100w_100h_1c.png",
+      "crawled_at": "2026-01-21 16:54:44",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "13MzjB8EEx",
+      "url": "https://www.bilibili.com/video/BV13MzjB8EEx",
+      "title": "少女 I can't wait",
+      "description": ":",
+      "publish_date": "2026-01-21 16:45:56",
+      "views": 0,
+      "danmaku": 0,
+      "up主": "-离子酱-",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/fa17ef59fffb1628aa6d0dade51004e507417eb3.jpg@100w_100h_1c.png",
+      "crawled_at": "2026-01-21 16:54:47",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "144zeBgEBT",
+      "url": "https://www.bilibili.com/video/BV144zeBgEBT",
+      "title": "【小兔开箱】天堂与美酒：大盒版 Heaven & Ale",
+      "description": "-",
+      "publish_date": "2026-01-26 22:27:41",
+      "views": 34,
+      "danmaku": 0,
+      "up主": "笑屠",
+      "thumbnail": "//i2.hdslb.com/bfs/archive/d97c368e5d080fe323175330d868ac725f62d53a.jpg@100w_100h_1c.png",
+      "duration": "10:11",
+      "crawled_at": "2026-01-26 22:36:21",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "1EUkpBTEqD",
+      "url": "https://www.bilibili.com/video/BV1EUkpBTEqD",
+      "title": "【原神整活】诶！我也要吗？",
+      "description": "什么原来这里是要写简介的吗！？",
+      "publish_date": "2026-01-18 15:07:52",
+      "views": 1623118,
+      "danmaku": 903,
+      "up主": "罐罐小狗",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/354c7592f4e9a3d90477a5ea862032410e6a8478.jpg@100w_100h_1c.png",
+      "duration": "02:38",
+      "crawled_at": "2026-01-26 22:36:23",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "1se4y1t7VT",
+      "url": "https://www.bilibili.com/video/BV1se4y1t7VT",
+      "title": "博士：6",
+      "description": "群941596266，欢迎各位萌新大佬",
+      "publish_date": "2022-11-03 01:11:25",
+      "views": 3098748,
+      "danmaku": 796,
+      "up主": "十连来个大炮",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/b46a0ab336448a21d4cda587771e37ed13f5c857.jpg@100w_100h_1c.png",
+      "duration": "03:26",
+      "crawled_at": "2026-01-26 22:36:25",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "1nUzPBCEpD",
+      "url": "https://www.bilibili.com/video/BV1nUzPBCEpD",
+      "title": "❤️婚后的哥伦比娅...想一口气生十个娃？❤️【原神整活】",
+      "description": "感谢@闪耀郑州小马  老师的授权！",
+      "publish_date": "2026-01-23 21:05:00",
+      "views": 56929,
+      "danmaku": 18,
+      "up主": "叶小笛YXD",
+      "thumbnail": "//i2.hdslb.com/bfs/archive/ceb8c08d89fe4dbcaf5d6f254eebef52daf4273d.jpg@100w_100h_1c.png",
+      "duration": "00:34",
+      "crawled_at": "2026-01-26 22:36:28",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "144zeBgEh4",
+      "url": "https://www.bilibili.com/video/BV144zeBgEh4",
+      "title": "浅草榜第一名",
+      "description": ":",
+      "publish_date": "2026-01-26 22:26:53",
+      "views": 50,
+      "danmaku": 0,
+      "up主": "孤独的KIWI",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/09d94c7dcd76b8840483c451a80596d9d9e9d5ca.jpg@100w_100h_1c.png",
+      "duration": "00:13",
+      "crawled_at": "2026-01-26 22:36:30",
+      "review_status": "pending",
+      "review_note": ""
+    }
+  ]
 }
