--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.10.0",
     "recharts": "^2.15.4",
+    "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "svgo": "^4.0.0",
     "tailwind-merge": "^3.4.0",
