refactor(frontend): 优化前端代码结构和依赖管理
移除模块导入中的版本号，统一使用包名导入
重构类型定义文件，支持JSON和文本文件导入
更新CSS主题选择器，使用data-theme属性替代类名
优化测试配置，增加测试覆盖率和性能优化
添加端到端测试和单元测试，提升代码质量
修复useMobile钩子的兼容性问题
更新性能优化文档和测试计划
重构弹幕组件，优化动画性能和样式
添加测试工具和脚本，提升开发效率

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,6 +75,7 @@
     "esbuild": "^0.25.12",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jest": "^29.12.1",
     "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
@@ -97,13 +98,28 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
+    "lint:test": "eslint tests --config .eslintrc.test.js",
     "preview": "vite preview",
     "test": "jest",
     "test:unit": "jest tests/unit",
     "test:integration": "jest tests/integration",
     "test:e2e": "jest tests/e2e",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:selective": "jest --testPathPattern=",
+    "test:tag": "jest --testNamePattern=",
+    "test:cached": "jest --cache",
+    "test:no-cache": "jest --no-cache",
+    "test:debug": "jest --verbose --no-cache",
+    "test:quick": "jest --maxWorkers=50% --silent",
+    "test:slow": "jest --maxWorkers=25% --verbose",
+    "test:ci": "jest --ci --coverage --maxWorkers=100%",
+    "test:dev": "jest --watch --verbose",
+    "test:filter": "jest --testPathIgnorePatterns=",
+    "test:only": "jest --testNamePattern=only",
+    "test:smoke": "jest --testPathPattern=smoke",
+    "test:regression": "jest --testPathPattern=regression",
+    "test:performance": "jest --testPathPattern=performance"
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,jsx}": [
