refactor(弹幕): 重构弹幕功能并优化性能
- 将弹幕数据从硬编码改为JSON文件导入
- 新增弹幕处理脚本，支持类型和颜色随机分配
- 重构弹幕组件为HorizontalDanmaku，优化动画性能
- 移除未使用的CSS动画定义和旧组件
- 更新构建流程以包含弹幕预处理步骤
- 添加技术分析文档说明弹幕功能实现

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -95,8 +95,9 @@
   },
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "prebuild": "node scripts/process-danmaku.js",
+    "build": "npm run prebuild && vite build",
+    "build:dev": "npm run prebuild && vite build --mode development",
     "lint": "eslint .",
     "lint:test": "eslint tests --config .eslintrc.test.js",
     "preview": "vite preview",
