--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Custom Static Web UI",
+  "name": "vid-timeline-x-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -84,7 +84,6 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "lint-staged": "^16.2.7",
-    "playwright": "^1.58.0",
     "prettier": "^3.8.1",
     "ts-jest": "^29.4.6",
     "tw-animate-css": "^1.4.0",
