--- a/frontend/package.json
+++ b/frontend/package.json
@@ -83,6 +83,7 @@
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "jest-junit": "^16.0.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
     "ts-jest": "^29.4.6",
