refactor: 重构后端配置和数据处理逻辑
- 将前端数据目录改为时间线数据目录，统一数据存储位置
- 更新BV文件路径引用方式，使用配置文件统一管理
- 修改爬虫逻辑，直接保存到已通过列表而非待审核列表
- 更新测试用例和主程序以适应新的配置路径
- 添加requirements.txt文件定义项目依赖
- 更新README中的文件路径说明
- 清理bv.txt中的无效数据

--- a/backend/data/approved.json
+++ b/backend/data/approved.json
@@ -1,220 +1,137 @@
 {
   "videos": [
     {
-      "id": 1,
-      "bv": "BV1ZHiyBkExG",
-      "url": "https://www.bilibili.com/video/BV1ZHiyBkExG",
-      "title": "《原神》哥伦比娅角色PV——「存于何处」",
-      "description": "夜晚打湿她的睫毛，惊喜像阳光一样落在她脚边。",
-      "publish_date": "2026-01-21",
-      "views": 3010487,
-      "danmaku": 56581,
-      "up主": "原神",
-      "thumbnail": "//i1.hdslb.com/bfs/archive/57b7a6358b0a552852242e66d1610eada2ac61b6.jpg@100w_100h_1c.png",
-      "crawled_at": "2026-01-21 12:00:00",
+      "bv": "1gk4y1r77A",
+      "url": "https://www.bilibili.com/video/BV1gk4y1r77A",
+      "title": "洞主20140502 早期余小C：爱情娱乐而已",
+      "description": "开幕雷击，进来就看见洞主在卖冰丝内裤",
+      "publish_date": "2020-05-23 14:32:22",
+      "views": 5564,
+      "danmaku": 14,
+      "up主": "加里奥的圣杯",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/968f0a85b69766aae0f8f46b5ecb30bc2d28fe50.jpg@100w_100h_1c.png",
+      "duration": "02:42:24",
+      "crawled_at": "2026-01-28 22:51:04",
       "review_status": "pending",
       "review_note": ""
     },
     {
-      "id": 2,
-      "bv": "BV16SveBSEyi",
-      "url": "https://www.bilibili.com/video/BV16SveBSEyi",
-      "title": "《原神》千星奇域 -「月之四」版本传说套装PV - 晨曦朝露",
-      "description": "一元复始，礼规更新。新的传说套装「晨曦朝露」即将登场。",
-      "publish_date": "2026-01-20",
-      "views": 880000,
-      "danmaku": 12000,
-      "up主": "原神千星奇域",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/f03d0a2fc7a903cfe1641a70a15ec992e569b821.jpg@100w_100h_1c.png",
-      "crawled_at": "2026-01-21 12:01:00",
-      "review_status": "pending",
-      "review_note": ""
-    },
-    {
-      "id": 3,
-      "bv": "BV1rbi8BrE7p",
-      "url": "https://www.bilibili.com/video/BV1rbi8BrE7p",
-      "title": "《原神》提瓦特风尚·衣装PV - 嘉夜沈邃",
-      "description": "冬天飘来了鲜花与柑橘，她的指尖落满星光。",
-      "publish_date": "2026-01-19",
-      "views": 1200000,
-      "danmaku": 25000,
-      "up主": "原神",
-      "thumbnail": "//i2.hdslb.com/bfs/archive/8d3a7d361d42dcd76cb471e5b49cfc6d0b2e2de3.jpg@100w_100h_1c.png",
-      "crawled_at": "2026-01-21 12:02:00",
-      "review_status": "pending",
-      "review_note": ""
-    },
-    {
-      "bv": "1QNzjBhE3s",
-      "url": "https://www.bilibili.com/video/BV1QNzjBhE3s",
-      "title": "乱打一通的2限定金小玛n6螃蟹",
+      "bv": "1Q7411E7X4",
+      "url": "https://www.bilibili.com/video/BV1Q7411E7X4",
+      "title": "洞主看自己8年前的直播视频，感慨万千。凯哥：精神小伙，不请自来！",
       "description": ":",
-      "publish_date": "2026-01-21 16:44:03",
-      "views": 278,
-      "danmaku": 0,
-      "up主": "K9P9K",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/fdb07b8cd033affe546eed3950c841e74e406194.jpg@100w_100h_1c.png",
-      "crawled_at": "2026-01-21 16:54:31",
+      "publish_date": "2020-02-17 04:56:24",
+      "views": 111604,
+      "danmaku": 170,
+      "up主": "派大驴TV",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/1bc5cca48050d3490dac16e247a584be3100cf0a.jpg@100w_100h_1c.png",
+      "duration": "04:41",
+      "crawled_at": "2026-01-28 22:51:06",
       "review_status": "pending",
       "review_note": ""
     },
     {
-      "bv": "1Ywr6BBEei",
-      "url": "https://www.bilibili.com/video/BV1Ywr6BBEei",
-      "title": "【原神】少女 哥伦比娅 超详细养成攻略教学",
+      "bv": "1jJ411g7pZ",
+      "url": "https://www.bilibili.com/video/BV1jJ411g7pZ",
+      "title": "再现名场面，洞主：凯哥我点了。凯哥：我发起的",
       "description": ":",
-      "publish_date": "2026-01-14 09:10:00",
-      "views": 657378,
-      "danmaku": 1614,
-      "up主": "贪欲九头蛇_",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/54149b70c5f6cb531e6b647788ac32ac1aad8357.jpg@100w_100h_1c.png",
-      "crawled_at": "2026-01-21 16:54:34",
+      "publish_date": "2019-09-22 12:37:13",
+      "views": 759873,
+      "danmaku": 123,
+      "up主": "发抛仔",
+      "thumbnail": "//i1.hdslb.com/bfs/archive/1fb27b1753d3ddac160514153862b8aac88c3389.jpg@100w_100h_1c.png",
+      "duration": "01:01",
+      "crawled_at": "2026-01-28 22:51:09",
       "review_status": "pending",
       "review_note": ""
     },
     {
-      "bv": "1XMzjB8EFH",
-      "url": "https://www.bilibili.com/video/BV1XMzjB8EFH",
-      "title": "「幽境危战」零命四星武器火神，1金队轻松通关难6火刃",
-      "description": "有了满伊就是不一样",
-      "publish_date": "2026-01-21 16:47:57",
-      "views": 102,
-      "danmaku": 0,
-      "up主": "舞之叶",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/42ef83de9b6f7d2e052f7cf6d2b7d3c93143fc2c.jpg@100w_100h_1c.png",
-      "crawled_at": "2026-01-21 16:54:37",
+      "bv": "1ct4y1Y79d",
+      "url": "https://www.bilibili.com/video/BV1ct4y1Y79d",
+      "title": "胡凯利自曝三连发 千万不要在地铁上看 憋出内伤概不负责",
+      "description": "笑了给个赞！！！",
+      "publish_date": "2020-12-02 13:52:44",
+      "views": 346355,
+      "danmaku": 429,
+      "up主": "一个玩B站的路人",
+      "thumbnail": "//i2.hdslb.com/bfs/archive/ac6d0c7bc87055156e565e2b360b8ae8cc31dce1.jpg@100w_100h_1c.png",
+      "duration": "08:44",
+      "crawled_at": "2026-01-28 22:51:11",
       "review_status": "pending",
       "review_note": ""
     },
     {
-      "bv": "1mKzGB5EJ7",
-      "url": "https://www.bilibili.com/video/BV1mKzGB5EJ7",
-      "title": "全网首发！五星全0命通关难度6",
+      "bv": "1Wo4y1o7HZ",
+      "url": "https://www.bilibili.com/video/BV1Wo4y1o7HZ",
+      "title": "3度是冷还是热",
+      "description": "来源洞主，特搞笑，特地剪下来了。",
+      "publish_date": "2021-01-15 20:49:59",
+      "views": 47611,
+      "danmaku": 12,
+      "up主": "刘郎才气゛",
+      "thumbnail": "//i2.hdslb.com/bfs/archive/48b4797ea999672c563534e6a340a338e811ef4d.png@100w_100h_1c.png",
+      "duration": "01:05",
+      "crawled_at": "2026-01-28 22:51:14",
+      "review_status": "pending",
+      "review_note": ""
+    },
+    {
+      "bv": "1f4411k7bM",
+      "url": "https://www.bilibili.com/video/BV1f4411k7bM",
+      "title": "凯哥洞主蜈蚣三互动",
       "description": ":",
-      "publish_date": "2026-01-21 10:40:58",
-      "views": 68924,
-      "danmaku": 171,
-      "up主": "漪棘",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/d3594b21225733cc2dd07b2ec01e79cb0c9a5439.jpg@100w_100h_1c.png",
-      "crawled_at": "2026-01-21 16:54:39",
+      "publish_date": "2019-09-07 23:03:44",
+      "views": 17666,
+      "danmaku": 28,
+      "up主": "当时我就丶惊呆了",
+      "thumbnail": "//i1.hdslb.com/bfs/archive/11b7aa7f035bc6eff32da9582d3b6cc283882e39.jpg@100w_100h_1c.png",
+      "duration": "02:31",
+      "crawled_at": "2026-01-28 22:51:16",
       "review_status": "pending",
       "review_note": ""
     },
     {
-      "bv": "1XPzjBwErv",
-      "url": "https://www.bilibili.com/video/BV1XPzjBwErv",
-      "title": "破冰人游戏手柄玩原神了解下",
-      "description": "这是一个关于破冰人游戏手柄玩原神了解下的精彩视频，为您带来优质的内容体验。欢迎观看并点赞支持！",
-      "publish_date": "2026-01-21 16:48:15",
-      "views": 0,
-      "danmaku": 0,
-      "up主": "好物学长",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/b6c5f95d5e2479f68fa24797d73a2acaf0fa458e.jpg@100w_100h_1c.png",
-      "crawled_at": "2026-01-21 16:54:42",
-      "review_status": "pending",
-      "review_note": ""
-    },
-    {
-      "bv": "1c4zjB7EZL",
-      "url": "https://www.bilibili.com/video/BV1c4zjB7EZL",
-      "title": "【原神】【半熟机翻 屠鸟哥】月之四 魔神任务 第八幕下",
+      "bv": "1624y1m7fE",
+      "url": "https://www.bilibili.com/video/BV1624y1m7fE",
+      "title": "新冠真的能治愈所有嘴硬！",
       "description": ":",
-      "publish_date": "2026-01-21 16:44:57",
-      "views": 20,
-      "danmaku": 0,
-      "up主": "Leaf君呀",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/82ba06399471398f76a7abdc3310d964c9cf9ff6.jpg@100w_100h_1c.png",
-      "crawled_at": "2026-01-21 16:54:44",
+      "publish_date": "2022-12-27 12:00:00",
+      "views": 1319042,
+      "danmaku": 1050,
+      "up主": "胡凯利_洞主",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/5d37f4ef2099a3424d96c66677e325693d7dd06d.jpg@100w_100h_1c.png",
+      "duration": "02:02",
+      "crawled_at": "2026-01-28 22:51:19",
       "review_status": "pending",
       "review_note": ""
     },
     {
-      "bv": "13MzjB8EEx",
-      "url": "https://www.bilibili.com/video/BV13MzjB8EEx",
-      "title": "少女 I can't wait",
-      "description": ":",
-      "publish_date": "2026-01-21 16:45:56",
-      "views": 0,
-      "danmaku": 0,
-      "up主": "-离子酱-",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/fa17ef59fffb1628aa6d0dade51004e507417eb3.jpg@100w_100h_1c.png",
-      "crawled_at": "2026-01-21 16:54:47",
+      "bv": "1z4411W7dL",
+      "url": "https://www.bilibili.com/video/BV1z4411W7dL",
+      "title": "桥头仪仗队：洞凯松C 在线发拋",
+      "description": "洞主直播录像",
+      "publish_date": "2019-05-29 17:11:10",
+      "views": 10792,
+      "danmaku": 6,
+      "up主": "躺着玩_",
+      "thumbnail": "//i1.hdslb.com/bfs/archive/be3dbea4ac5773dc0efd01cb5df52380065d925a.jpg@100w_100h_1c.png",
+      "duration": "03:04",
+      "crawled_at": "2026-01-28 22:51:21",
       "review_status": "pending",
       "review_note": ""
     },
     {
-      "bv": "144zeBgEBT",
-      "url": "https://www.bilibili.com/video/BV144zeBgEBT",
-      "title": "【小兔开箱】天堂与美酒：大盒版 Heaven & Ale",
-      "description": "-",
-      "publish_date": "2026-01-26 22:27:41",
-      "views": 34,
-      "danmaku": 0,
-      "up主": "笑屠",
-      "thumbnail": "//i2.hdslb.com/bfs/archive/d97c368e5d080fe323175330d868ac725f62d53a.jpg@100w_100h_1c.png",
-      "duration": "10:11",
-      "crawled_at": "2026-01-26 22:36:21",
-      "review_status": "pending",
-      "review_note": ""
-    },
-    {
-      "bv": "1EUkpBTEqD",
-      "url": "https://www.bilibili.com/video/BV1EUkpBTEqD",
-      "title": "【原神整活】诶！我也要吗？",
-      "description": "什么原来这里是要写简介的吗！？",
-      "publish_date": "2026-01-18 15:07:52",
-      "views": 1623118,
-      "danmaku": 903,
-      "up主": "罐罐小狗",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/354c7592f4e9a3d90477a5ea862032410e6a8478.jpg@100w_100h_1c.png",
+      "bv": "1JY4y1a7fb",
+      "url": "https://www.bilibili.com/video/BV1JY4y1a7fb",
+      "title": "【驴酱聊天室】流浪汉后续：洞主展示监控拍到凯菇的照片，业主在群里叫保安抓人哈哈哈",
+      "description": "点赞立大功，投币立天功，obok",
+      "publish_date": "2022-04-17 12:59:24",
+      "views": 408306,
+      "danmaku": 199,
+      "up主": "热心B友张合",
+      "thumbnail": "//i0.hdslb.com/bfs/archive/26038ce75ef20c08ad544ee11272213aeffac47a.jpg@100w_100h_1c.png",
       "duration": "02:38",
-      "crawled_at": "2026-01-26 22:36:23",
-      "review_status": "pending",
-      "review_note": ""
-    },
-    {
-      "bv": "1se4y1t7VT",
-      "url": "https://www.bilibili.com/video/BV1se4y1t7VT",
-      "title": "博士：6",
-      "description": "群941596266，欢迎各位萌新大佬",
-      "publish_date": "2022-11-03 01:11:25",
-      "views": 3098748,
-      "danmaku": 796,
-      "up主": "十连来个大炮",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/b46a0ab336448a21d4cda587771e37ed13f5c857.jpg@100w_100h_1c.png",
-      "duration": "03:26",
-      "crawled_at": "2026-01-26 22:36:25",
-      "review_status": "pending",
-      "review_note": ""
-    },
-    {
-      "bv": "1nUzPBCEpD",
-      "url": "https://www.bilibili.com/video/BV1nUzPBCEpD",
-      "title": "❤️婚后的哥伦比娅...想一口气生十个娃？❤️【原神整活】",
-      "description": "感谢@闪耀郑州小马  老师的授权！",
-      "publish_date": "2026-01-23 21:05:00",
-      "views": 56929,
-      "danmaku": 18,
-      "up主": "叶小笛YXD",
-      "thumbnail": "//i2.hdslb.com/bfs/archive/ceb8c08d89fe4dbcaf5d6f254eebef52daf4273d.jpg@100w_100h_1c.png",
-      "duration": "00:34",
-      "crawled_at": "2026-01-26 22:36:28",
-      "review_status": "pending",
-      "review_note": ""
-    },
-    {
-      "bv": "144zeBgEh4",
-      "url": "https://www.bilibili.com/video/BV144zeBgEh4",
-      "title": "浅草榜第一名",
-      "description": ":",
-      "publish_date": "2026-01-26 22:26:53",
-      "views": 50,
-      "danmaku": 0,
-      "up主": "孤独的KIWI",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/09d94c7dcd76b8840483c451a80596d9d9e9d5ca.jpg@100w_100h_1c.png",
-      "duration": "00:13",
-      "crawled_at": "2026-01-26 22:36:30",
+      "crawled_at": "2026-01-28 22:51:24",
       "review_status": "pending",
       "review_note": ""
     }
