--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,52 @@ node_modules
 playwright-report/
 test-results/
 tests/output/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Python virtual environments
+venv/
+env/
+ENV/
+
+# Python build and distribution
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Python testing and coverage
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.hypothesis/
+
+# Python type checking and tools
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pylint.d/
+
+# Python IDE and tools
+.spyderproject
+.spyproject
+.ropeproject
+.project
+.pydevproject
+.settings/
