feat(视频展示): 重构视频封面处理逻辑并添加B站图片代理
- 移除硬编码的封面URL，使用video.cover字段作为封面来源
- 添加B站图片代理配置解决跨域问题
- 重构ImageWithFallback组件支持代理URL和加载状态
- 更新测试用例验证封面图片使用逻辑
- 修复爬虫提取的缩略图URL格式问题

--- a/backend/data/approved.json
+++ b/backend/data/approved.json
@@ -1,21 +1,6 @@
 {
   "videos": [
     {
-      "bv": "1gk4y1r77A",
-      "url": "https://www.bilibili.com/video/BV1gk4y1r77A",
-      "title": "洞主20140502 早期余小C：爱情娱乐而已",
-      "description": "开幕雷击，进来就看见洞主在卖冰丝内裤",
-      "publish_date": "2020-05-23 14:32:22",
-      "views": 5564,
-      "danmaku": 14,
-      "up主": "加里奥的圣杯",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/968f0a85b69766aae0f8f46b5ecb30bc2d28fe50.jpg@100w_100h_1c.png",
-      "duration": "02:42:24",
-      "crawled_at": "2026-01-28 22:51:04",
-      "review_status": "pending",
-      "review_note": ""
-    },
-    {
       "bv": "1Q7411E7X4",
       "url": "https://www.bilibili.com/video/BV1Q7411E7X4",
       "title": "洞主看自己8年前的直播视频，感慨万千。凯哥：精神小伙，不请自来！",
@@ -24,9 +9,9 @@
       "views": 111604,
       "danmaku": 170,
       "up主": "派大驴TV",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/1bc5cca48050d3490dac16e247a584be3100cf0a.jpg@100w_100h_1c.png",
+      "thumbnail": "https://i0.hdslb.com/bfs/archive/1bc5cca48050d3490dac16e247a584be3100cf0a.jpg",
       "duration": "04:41",
-      "crawled_at": "2026-01-28 22:51:06",
+      "crawled_at": "2026-01-28 23:23:46",
       "review_status": "pending",
       "review_note": ""
     },
@@ -36,12 +21,12 @@
       "title": "再现名场面，洞主：凯哥我点了。凯哥：我发起的",
       "description": ":",
       "publish_date": "2019-09-22 12:37:13",
-      "views": 759873,
+      "views": 759880,
       "danmaku": 123,
       "up主": "发抛仔",
-      "thumbnail": "//i1.hdslb.com/bfs/archive/1fb27b1753d3ddac160514153862b8aac88c3389.jpg@100w_100h_1c.png",
+      "thumbnail": "https://i1.hdslb.com/bfs/archive/1fb27b1753d3ddac160514153862b8aac88c3389.jpg",
       "duration": "01:01",
-      "crawled_at": "2026-01-28 22:51:09",
+      "crawled_at": "2026-01-28 23:23:48",
       "review_status": "pending",
       "review_note": ""
     },
@@ -51,12 +36,12 @@
       "title": "胡凯利自曝三连发 千万不要在地铁上看 憋出内伤概不负责",
       "description": "笑了给个赞！！！",
       "publish_date": "2020-12-02 13:52:44",
-      "views": 346355,
+      "views": 346368,
       "danmaku": 429,
       "up主": "一个玩B站的路人",
-      "thumbnail": "//i2.hdslb.com/bfs/archive/ac6d0c7bc87055156e565e2b360b8ae8cc31dce1.jpg@100w_100h_1c.png",
+      "thumbnail": "https://i2.hdslb.com/bfs/archive/ac6d0c7bc87055156e565e2b360b8ae8cc31dce1.jpg",
       "duration": "08:44",
-      "crawled_at": "2026-01-28 22:51:11",
+      "crawled_at": "2026-01-28 23:23:50",
       "review_status": "pending",
       "review_note": ""
     },
@@ -69,9 +54,9 @@
       "views": 47611,
       "danmaku": 12,
       "up主": "刘郎才气゛",
-      "thumbnail": "//i2.hdslb.com/bfs/archive/48b4797ea999672c563534e6a340a338e811ef4d.png@100w_100h_1c.png",
+      "thumbnail": "https://i2.hdslb.com/bfs/archive/48b4797ea999672c563534e6a340a338e811ef4d.png",
       "duration": "01:05",
-      "crawled_at": "2026-01-28 22:51:14",
+      "crawled_at": "2026-01-28 23:23:53",
       "review_status": "pending",
       "review_note": ""
     },
@@ -84,9 +69,9 @@
       "views": 17666,
       "danmaku": 28,
       "up主": "当时我就丶惊呆了",
-      "thumbnail": "//i1.hdslb.com/bfs/archive/11b7aa7f035bc6eff32da9582d3b6cc283882e39.jpg@100w_100h_1c.png",
+      "thumbnail": "https://i1.hdslb.com/bfs/archive/11b7aa7f035bc6eff32da9582d3b6cc283882e39.jpg",
       "duration": "02:31",
-      "crawled_at": "2026-01-28 22:51:16",
+      "crawled_at": "2026-01-28 23:23:55",
       "review_status": "pending",
       "review_note": ""
     },
@@ -96,12 +81,12 @@
       "title": "新冠真的能治愈所有嘴硬！",
       "description": ":",
       "publish_date": "2022-12-27 12:00:00",
-      "views": 1319042,
+      "views": 1319044,
       "danmaku": 1050,
       "up主": "胡凯利_洞主",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/5d37f4ef2099a3424d96c66677e325693d7dd06d.jpg@100w_100h_1c.png",
+      "thumbnail": "https://i0.hdslb.com/bfs/archive/5d37f4ef2099a3424d96c66677e325693d7dd06d.jpg",
       "duration": "02:02",
-      "crawled_at": "2026-01-28 22:51:19",
+      "crawled_at": "2026-01-28 23:23:58",
       "review_status": "pending",
       "review_note": ""
     },
@@ -114,9 +99,9 @@
       "views": 10792,
       "danmaku": 6,
       "up主": "躺着玩_",
-      "thumbnail": "//i1.hdslb.com/bfs/archive/be3dbea4ac5773dc0efd01cb5df52380065d925a.jpg@100w_100h_1c.png",
+      "thumbnail": "https://i1.hdslb.com/bfs/archive/be3dbea4ac5773dc0efd01cb5df52380065d925a.jpg",
       "duration": "03:04",
-      "crawled_at": "2026-01-28 22:51:21",
+      "crawled_at": "2026-01-28 23:24:00",
       "review_status": "pending",
       "review_note": ""
     },
@@ -126,12 +111,12 @@
       "title": "【驴酱聊天室】流浪汉后续：洞主展示监控拍到凯菇的照片，业主在群里叫保安抓人哈哈哈",
       "description": "点赞立大功，投币立天功，obok",
       "publish_date": "2022-04-17 12:59:24",
-      "views": 408306,
+      "views": 408314,
       "danmaku": 199,
       "up主": "热心B友张合",
-      "thumbnail": "//i0.hdslb.com/bfs/archive/26038ce75ef20c08ad544ee11272213aeffac47a.jpg@100w_100h_1c.png",
+      "thumbnail": "https://i0.hdslb.com/bfs/archive/26038ce75ef20c08ad544ee11272213aeffac47a.jpg",
       "duration": "02:38",
-      "crawled_at": "2026-01-28 22:51:24",
+      "crawled_at": "2026-01-28 23:24:03",
       "review_status": "pending",
       "review_note": ""
     }
