refactor(frontend): 优化代码结构并修复类型问题
- 重构 VideoCard 组件，使用字符串指定图标而非直接传递组件
- 修复 types.ts 中 Video 接口的可选属性
- 移除未使用的状态和导入
- 添加测试 ID 到 Header 和 ThemeToggle 组件
- 更新文档格式和表格对齐
- 添加 style-mock.js 用于测试
- 修复 JSON 文件格式和换行符问题
- 更新依赖版本到最新
- 优化 build 脚本移除冗余步骤
- 添加 jest 配置文件支持测试

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,7 +63,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@jest/globals": "^30.2.0",
-    "@playwright/test": "^1.57.0",
+    "@playwright/test": "^1.58.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
@@ -97,8 +97,8 @@
   "scripts": {
     "dev": "vite --host",
     "prebuild": "node scripts/process-danmaku.js",
-    "build": "npm run prebuild && vite build",
-    "build:dev": "npm run prebuild && vite build --mode development",
+    "build": "vite build",
+    "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "lint:test": "eslint tests --config .eslintrc.test.js",
     "preview": "vite preview",
