refactor(test): 优化测试代码和类型安全
- 将测试中的@ts-ignore替换为@ts-expect-error以提高类型安全性
- 为视频卡片添加data-testid属性便于测试
- 优化视觉回归测试的等待策略和容错阈值
- 移除不必要的移动端响应式测试用例
- 更新.gitignore忽略视觉测试快照目录

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -59,3 +59,7 @@ ehthumbs.db
 yarn.lock
 pnpm-lock.yaml
 node_modules
+
+# Visual regression test snapshots
+tests/e2e/visual/visual-regression.test.tsx-snapshots/
+test-results/
