feat(test): 改进移动端不支持测试并添加测试报告
- 修改测试脚本以生成JSON格式报告
- 添加HTML和JSON格式的测试报告
- 更新测试配置和类型声明
- 优化测试执行和结果解析逻辑

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -122,7 +122,7 @@
     "test:smoke": "jest --testPathPattern=smoke",
     "test:regression": "jest --testPathPattern=regression",
     "test:performance": "jest --testPathPattern=performance",
-    "test:mobile-not-supported": "node scripts/test-mobile-not-supported.js"
+    "test:mobile-not-supported": "node scripts/test-mobile-not-supported.cjs"
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,jsx}": [
