feat(deploy): 支持自定义域名部署并优化GitHub Pages配置
添加自定义域名vx.forzenfox.com支持，更新部署工作流和文档
重构前端构建配置以支持自定义域名和子路径部署
删除过时的样式优化和动画修复文档，新增GitHub部署技术文档
更新环境变量配置和生产构建参数

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [master]
   workflow_dispatch:
+    inputs:
+      custom_domain:
+        description: 'Custom domain (e.g., vx.forzenfox.com)'
+        required: false
+        default: ''
 
 permissions:
   contents: read
@@ -44,12 +49,18 @@ jobs:
         run: npm run build
         working-directory: frontend
         env:
-          VITE_BASE_URL: /VidTimelineX/
+          VITE_CUSTOM_DOMAIN: ${{ github.event.inputs.custom_domain || 'vx.forzenfox.com' }}
           
       - name: Upload build artifacts
         uses: actions/upload-pages-artifact@v3
         with:
           path: frontend/build/
+          
+      - name: Configure custom domain
+        if: github.event.inputs.custom_domain != '' || true
+        run: |
+          echo "${{ github.event.inputs.custom_domain || 'vx.forzenfox.com' }}" > frontend/build/CNAME
+        shell: bash
           
   deploy:
     environment:
