--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,9 @@
 # 生产环境变量配置
+# 自定义域名配置（使用自定义域名时取消注释并修改为你的域名）
+# VITE_CUSTOM_DOMAIN=vx.forzenfox.com
+
+# 备用配置：使用GitHub Pages子路径
+# VITE_BASE_URL=/VidTimelineX/
+
+# 默认使用根路径（配合自定义域名使用）
 VITE_BASE_URL=/
