--- a/.github/workflows/ci-non-master.yml
+++ b/.github/workflows/ci-non-master.yml
@@ -41,4 +41,4 @@ jobs:
         run: npm run build
         working-directory: frontend
         env:
-          VITE_BASE_URL: /VidTimelineX/
+          VITE_BASE_URL: /
