--- a/frontend/package.json
+++ b/frontend/package.json
@@ -92,7 +92,8 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
-    "vite-plugin-image-optimizer": "^2.0.3"
+    "vite-plugin-image-optimizer": "^2.0.3",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "scripts": {
     "dev": "vite --host",
