chore(ci): 添加 PR 事件支持，确保 develop 到 master 的 PR 能触发 CI

--- a/.github/workflows/ci-non-master.yml
+++ b/.github/workflows/ci-non-master.yml
@@ -3,6 +3,8 @@ name: CI for Non-master Branches
 on:
   push:
     branches-ignore: [master]
+  pull_request:
+    branches: [master]
 
 permissions:
   contents: read
