feat: 实现内存处理流程并移除BV文件依赖
重构爬虫系统以支持内存处理，移除对BV号文件的依赖
- 新增内存处理接口 crawl_favorites_to_memory 和 run_with_memory
- 添加 crawl_from_bv_list 方法直接处理内存中的BV列表
- 移除与BV文件相关的配置、路径管理和测试代码
- 标准化BV号格式处理逻辑
- 添加集成测试和性能测试
- 更新主程序以使用新的内存处理流程

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -63,3 +63,4 @@ node_modules
 # Visual regression test snapshots
 tests/e2e/visual/visual-regression.test.tsx-snapshots/
 test-results/
+test-reports/
