ci(workflow): 添加 Playwright 浏览器安装步骤并更新执行脚本
在 CI 工作流中添加 Playwright 浏览器安装步骤以确保依赖完整
将执行脚本从 update_timeline.py 更改为 main.py

--- a/.github/workflows/schedule-update.yml
+++ b/.github/workflows/schedule-update.yml
@@ -28,10 +28,15 @@ jobs:
           cd backend
           pip install -r requirements.txt
       
+      - name: 安装 Playwright 浏览器
+        run: |
+          cd backend
+          playwright install chromium
+      
       - name: 执行时间线更新脚本
         run: |
           cd backend
-          python update_timeline.py
+          python main.py
       
       - name: 检查文件变动
         id: check-changes
