--- a/.github/workflows/ci-non-master.yml
+++ b/.github/workflows/ci-non-master.yml
@@ -12,33 +12,54 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  ci:
+  frontend-ci:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
-          
+
       - name: Install dependencies
         run: npm ci
         working-directory: frontend
-        
+
       - name: Static analysis (Lint)
         run: npm run lint
         working-directory: frontend
-        
+
       - name: Run tests
         run: npm run test:ci
         working-directory: frontend
-        
+
       - name: Build project
         run: npm run build
         working-directory: frontend
         env:
           VITE_BASE_URL: /
+
+  backend-ci:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+
+      - name: Install dependencies
+        run: |
+          cd backend
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: |
+          cd backend
+          pytest tests/ -v
