ci(workflow): 优化 master-ci.yml 触发条件
- 跳过 PR 合并产生的 push 事件
- 避免与 ci-non-master.yml 重复检查
- 只在直接 push 到 master 时触发

--- a/.github/workflows/master-ci.yml
+++ b/.github/workflows/master-ci.yml
@@ -13,6 +13,8 @@ concurrency:
 
 jobs:
   frontend-ci:
+    # 跳过 PR 合并产生的 push，因为 ci-non-master.yml 已在 PR 阶段检查
+    if: ${{ !contains(github.event.head_commit.message, 'Merge pull request') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -44,6 +46,8 @@ jobs:
           VITE_BASE_URL: /
 
   backend-ci:
+    # 跳过 PR 合并产生的 push，因为 ci-non-master.yml 已在 PR 阶段检查
+    if: ${{ !contains(github.event.head_commit.message, 'Merge pull request') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
