ci(workflow): 修复 Python 模块导入问题
- 将 pytest 命令改为 python -m pytest
- 解决 ModuleNotFoundError: No module named 'src' 错误
- 适用于 ci-non-master.yml 和 master-ci.yml

--- a/.github/workflows/master-ci.yml
+++ b/.github/workflows/master-ci.yml
@@ -66,4 +66,4 @@ jobs:
       - name: Run tests
         run: |
           cd backend
-          pytest tests/ -v
+          python -m pytest tests/ -v
