--- a/.github/workflows/ci-non-master.yml
+++ b/.github/workflows/ci-non-master.yml
@@ -62,4 +62,4 @@ jobs:
       - name: Run tests
         run: |
           cd backend
-          pytest tests/ -v
+          python -m pytest tests/ -v
