ci(workflow): 修复 schedule-update.yml 的 Python 模块导入问题
- 添加 PYTHONPATH 环境变量
- 解决 main.py 执行时的 ModuleNotFoundError 错误

--- a/.github/workflows/schedule-update.yml
+++ b/.github/workflows/schedule-update.yml
@@ -37,6 +37,8 @@ jobs:
         run: |
           cd backend
           python main.py
+        env:
+          PYTHONPATH: ${{ github.workspace }}/backend
       
       - name: 检查文件变动
         id: check-changes
