feat(test): 添加测试环境配置并清理测试数据
- 在.gitignore中添加测试数据目录
- 修改测试用例使用test数据类型
- 添加test配置到config.json
- 清理lvjiang测试数据

--- a/backend/config.json
+++ b/backend/config.json
@@ -3,12 +3,17 @@
     "lvjiang": {
       "favorites_url": "https://space.bilibili.com/57320454/favlist?fid=3965175154&ftype=create&ctype=21",
       "backend_timeline_file": "data/lvjiang/videos.json",
-      "frontend_timeline_file": "C:\\Users\\skyzl\\AppData\\Local\\Temp\\tmp93_u4b0p\\frontend_data\\src\\features\\lvjiang\\data\\videos.json"
+      "frontend_timeline_file": "../frontend/src/features/lvjiang/data/videos.json"
     },
     "tiantong": {
       "favorites_url": "https://space.bilibili.com/57320454/favlist?fid=3869352154&ftype=create&ctype=21",
       "backend_timeline_file": "data/tiantong/videos.json",
       "frontend_timeline_file": "../frontend/src/features/tiantong/data/videos.json"
+    },
+    "test": {
+      "favorites_url": "",
+      "backend_timeline_file": "data/test/videos.json",
+      "frontend_timeline_file": "data/test/frontend_videos.json"
     }
   },
   "crawler": {
