--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -33,6 +33,9 @@ dist-ssr
 # Build files
 build/
 
+# Generated data files (processed during build)
+**/danmaku-processed.json
+
 # Testing
 coverage/
 *.lcov
