--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,11 @@
 requests>=2.28.0
 beautifulsoup4>=4.11.0
 playwright>=1.47.0,<1.50.0
+pillow>=10.0.0
+
+# 测试依赖
 pytest>=7.0.0
+pytest-cov>=4.0.0
 
 # 可选依赖
 python-dotenv>=0.20.0
