feat(cdn): 添加 jsDelivr CDN 支持以加速静态资源加载
新增 CDN 工具模块，支持通过 jsDelivr CDN 加速静态资源加载
在部署工作流中添加 VITE_USE_JSDELIVR_CDN 环境变量配置
更新 ImageWithFallback 组件以支持 CDN 回退策略
添加 CDN 相关单元测试和类型定义

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,7 @@ jobs:
         working-directory: frontend
         env:
           VITE_CUSTOM_DOMAIN: ${{ github.event.inputs.custom_domain || 'vx.forzenfox.com' }}
+          VITE_USE_JSDELIVR_CDN: true
           
       - name: Upload build artifacts
         uses: actions/upload-pages-artifact@v3
