feat(yuxiaoc): 更新余小C模块功能与样式
- 新增弹幕颜色管理模块，优化弹幕颜色配置
- 重构弹幕数据结构，简化处理逻辑
- 更新混躺模式主题配色，改为亮色系
- 添加弹幕处理脚本，优化构建流程
- 调整弹幕组件样式，增强视觉效果
- 更新测试用例适配新数据结构
- 修正直播间ID为1126960
- 优化Header组件布局和外部链接样式
- 新增滚动到顶部按钮样式

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -97,7 +97,7 @@
   },
   "scripts": {
     "dev": "vite --host",
-    "prebuild": "node scripts/process-danmaku.js",
+    "prebuild": "node scripts/process-danmaku.js && node scripts/build-danmaku-yuxiaoc.js",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
