fix(workflow): add --auto flag to resolve auto merge failure

--- a/.github/workflows/schedule-update.yml
+++ b/.github/workflows/schedule-update.yml
@@ -118,8 +118,8 @@ jobs:
 
           if [ -n "$EXISTING_PR" ]; then
             echo "自动合并 PR #$EXISTING_PR"
-            # 使用 GitHub CLI 合并 PR，设置为 squash 模式
-            gh pr merge $EXISTING_PR --squash --delete-branch --body "自动合并时间线数据更新"
+            # 使用 GitHub CLI 合并 PR，设置为 squash 模式，添加 --auto 标志让PR在满足所有要求后自动合并
+            gh pr merge $EXISTING_PR --squash --delete-branch --body "自动合并时间线数据更新" --auto
           else
             echo "未找到 PR，跳过合并步骤"
           fi
