feat(yuxiaoc): 添加余小C相关数据及配置
- 更新voices.json中的作者信息
- 新增canteenCategories.json定义食堂分类
- 在config.json中添加yuxiaoc配置
- 新增videos.json视频数据
- 重构videos.ts使用JSON数据源

--- a/backend/config.json
+++ b/backend/config.json
@@ -9,6 +9,11 @@
       "favorites_url": "https://space.bilibili.com/57320454/favlist?fid=3869352154&ftype=create&ctype=21",
       "backend_timeline_file": "data/tiantong/videos.json",
       "frontend_timeline_file": "../frontend/src/features/tiantong/data/videos.json"
+    },
+    "yuxiaoc": {
+      "favorites_url": "https://space.bilibili.com/57320454/favlist?fid=3878580154&ftype=create",
+      "backend_timeline_file": "data/yuxiaoc/videos.json",
+      "frontend_timeline_file": "../frontend/src/features/yuxiaoc/data/videos.json"
     }
   },
   "crawler": {
